--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -2,23 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,300;1,300&family=Open+Sans:wght@300;600&family=Oswald:wght@200&display=swap');
 
 /* Återställ standardmarginaler, fyllningar och box-modell för alla element */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 /* Ändra utseendet på hela sidans kropp */
-body
-{
+body {
     background-color: #fff; /* Bakgrundsfärg */
     line-height: 1.4rem; /* Mellan radernas avstånd */
-    font-family: serif; /* Typsnittsfamilj */
+    font-family: 'Open Sans', sans-serif; /* Typsnittsfamilj */
 }
 
 /* Allt innehåll (header + article) inställningar på sidan */
-.main
-{
+.main {
     margin: 16px auto; /* Avstånd från kanten */
     background: #fff; /* Bakgrundsfärg */
     width: 96%; /* Bredd på huvudinnehållet */
@@ -28,21 +26,18 @@ body
 }
 
 /* Ändra standardtextstorleken för hela dokumentet */
-html
-{
+html {
     font-size: 100%;
 }
 
 /* Inställningar för vanliga textstycken */
-p
-{
+p {
     font-size: 1.2rem; /* Textstorlek */
     margin-bottom: 1.68rem; /* Avstånd från efterföljande element */
 }
 
 /* Inställningar för rubriker av typen h1 */
-h1
-{
+h1 {
     text-transform: uppercase; /* Omvandla text till versaler */
     font-family: 'Kanit', sans-serif; /* Typsnittsfamilj */
     font-size: 2.4rem; /* Textstorlek */
@@ -50,19 +45,14 @@ h1
 }
 
 /* Inställningar för navigationsmenyn */
-.nav
-{
+.nav {
     display: flex; /* Flexbox-layout */
     flex-direction: row; /* Horisontell riktning */
     justify-content: space-between; /* Jämna utrymmet mellan element */
     background-color: #adee66; /* Bakgrundsfärg */
-    margin-bottom: 3rem; /* Avstånd från efterföljande element */
     padding: 5px; /* Inre fyllning */
     font-size: 1.2rem; /* Textstorlek */
     margin-bottom: 100px; /* Öka avståndet mellan varje länk */
-    margin-right: 1px; /* Öka avståndet mellan varje länk */
-    margin-left: 10px; /* Öka avståndet mellan varje länk */
-
 }
 
 /* Inställningar för länkar i navigationsmenyn */
@@ -77,26 +67,20 @@ h1
     text-decoration: underline; /* Understrykning vid hover */
 }
 
-
 /* Inställningar för bilder */
-img
-{
+img {
     max-width: 100%; /* Begränsa bildbredden till förälderelementets bredd */
-
 }
-
 
 .välkomnestext {
     color: #ea0909; /* Textfärg */
     display: flex; /* Flexbox-layout */
     flex-direction: row; /* Horisontell riktning */
     justify-content: space-between; /* Jämna utrymmet mellan element */
-    margin-bottom: 2rem; /* Avstånd från efterföljande element, dvs avstånd mellan detta stycket och nästa och förra*/
-    padding: 8px; /* Inre fyllning (ihoptryckhet) */
+    margin-bottom: 2rem; /* Avstånd från efterföljande element */
+    padding: 8px; /* Inre fyllning */
     line-height: 1.6; /* ändra avståndet mellan raderna */
-
 }
-
 
 /* Styling för h2-rubrik med fetstilt röd text */
 .h12 {
@@ -105,35 +89,22 @@ img
     margin-left: 180px; /* Öka avståndet mellan varje länk */
 }
 
-
-
-
-
-
-/*###########################################################################################*/
-/*QURAN.html */
-
-
-.Quran-h1{
+/* Styling för rubrik i QURAN.html */
+.Quran-h1 {
     margin: 16px auto; /* Avstånd från kanten */
     background: #fff8c0; /* Bakgrundsfärg */
     width: 96%; /* Bredd på huvudinnehållet */
     max-width: 700px; /* Maximal bredd */
     padding: 1px; /* Inre fyllning */
     border-radius: 8px; /* Avrundade hörn */
-    margin-bottom: 2rem; /* Avstånd från efterföljande element, dvs avstånd mellan detta stycket och nästa och förra*/
+    margin-bottom: 2rem; /* Avstånd från efterföljande element */
     line-height: 1.5; /* ändra avståndet mellan raderna */
-
     font-size: 1.95rem; /* Textstorlek */
-
     color: rgb(0, 0, 0); /* Textfärg röd */
-
-
 }
 
-
-
-.soar{
+/* Styling för navigationsmenyn i QURAN.html */
+.soar {
     display: inline-flex; /* Flexbox-layout i en rad */
     flex-direction: column; /* Horisontell riktning */
     justify-content: space-between; /* Jämna utrymmet mellan element */
@@ -141,15 +112,11 @@ img
     padding: 5px; /* Inre fyllning */
     font-size: 1.2rem; /* Textstorlek */
     line-height: 3; /* ändra avståndet mellan raderna */
-
     margin-bottom: 100px; /* Öka avståndet mellan varje länk */
     margin-left: 600px; /* Öka avståndet mellan varje länk */
 }
 
-
-/*###########################################################################################*/
-/*soar ALFATIHA*/
-
+/* Övriga anpassningar för specifika sidor */
 .TAWITHA {
     margin: 16px auto; /* Avstånd från kanten */
     font-size: 3.5rem; /* Textstorlek */
@@ -158,30 +125,22 @@ img
     align-items: center; /* Centrera vertikalt */
     justify-content: center; /* Centrera horisontellt */
     padding: 20px; /* Utrymme runt texten */
-    margin-bottom: 5rem; /* Avstånd från efterföljande element, dvs avstånd mellan detta stycket och nästa och förra*/
-
+    margin-bottom: 5rem; /* Avstånd från efterföljande element */
 }
 
-
-
-.ALFATIHATEXT{
+.ALFATIHATEXT {
     margin: 16px auto; /* Avstånd från kanten */
-    display: flex; /* Flexbox-layout (mitt i sidan) */ 
-    align-items: center; /* Centrera vertikalt (mitt i sidan) */
-    justify-content: center; /* Centrera horisontellt (mitt i sidan) */
-
-
-    background: #ffeabe; /* Bakgrundsfärg */ 
+    display: flex; /* Flexbox-layout */
+    align-items: center; /* Centrera vertikalt */
+    justify-content: center; /* Centrera horisontellt */
+    background: #ffeabe; /* Bakgrundsfärg */
     padding: 20px; /* Inre fyllning */
     font-size: 2.0rem; /* Textstorlek */
     line-height: 2.0; /* ändra avståndet mellan raderna */
-    margin-bottom: 5rem; /* Avstånd från efterföljande element, dvs avstånd mellan detta stycket och nästa och förra*/
-
-
+    margin-bottom: 5rem; /* Avstånd från efterföljande element */
 }
 
-
-.SADAKAALLAH{
+.SADAKAALLAH {
     margin: 16px auto; /* Avstånd från kanten */
     font-size: 3.5rem; /* Textstorlek */
     background-color: #e82828; /* Bakgrundsfärg */
@@ -189,13 +148,10 @@ img
     align-items: center; /* Centrera vertikalt */
     justify-content: center; /* Centrera horisontellt */
     padding: 20px; /* Utrymme runt texten */
-    margin-bottom: 5rem; /* Avstånd från efterföljande element, dvs avstånd mellan detta stycket och nästa och förra*/
-
+    margin-bottom: 5rem; /* Avstånd från efterföljande element */
 }
 
-
-
-.JIZE{
+.JIZE {
     margin: 16px auto; /* Avstånd från kanten */
     font-size: 2.8rem; /* Textstorlek */
     background-color: #9c5ff7; /* Bakgrundsfärg */
@@ -203,13 +159,9 @@ img
     align-items: center; /* Centrera vertikalt */
     justify-content: center; /* Centrera horisontellt */
     padding: 20px; /* Utrymme runt texten */
-    margin-bottom: 5rem; /* Avstånd från efterföljande element, dvs avstånd mellan detta stycket och nästa och förra*/
-} 
-
-
-.albakarapicture
-{
-    margin-left: 130px; /* Öka avståndet mellan varje länk */
+    margin-bottom: 5rem; /* Avstånd från efterföljande element */
 }
 
-/*###########################################################################################*/
+.albakarapicture {
+    margin-left: 130px; /* Öka avståndet mellan varje länk */
+}
